[gd_scene load_steps=5 format=3 uid="uid://dq3kocnxq0xtn"]

[ext_resource type="Script" path="res://Camera.gd" id="1_odyw8"]
[ext_resource type="Script" path="res://Blocks.gd" id="1_rnrs5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xaafu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tcajv"]

[node name="Main" type="Node2D"]

[node name="ColorRect" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
offset_left = -2122.0
offset_top = -1207.0
offset_right = -488.0
offset_bottom = -297.0
scale = Vector2(3.16349, 3.8673)
color = Color(1, 0.803922, 0.647059, 1)

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("1_odyw8")

[node name="Blocks" type="Node2D" parent="."]
script = ExtResource("1_rnrs5")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Size" type="HSlider" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -188.5
offset_top = -16.0
offset_right = 188.5
grow_horizontal = 2
grow_vertical = 0
min_value = 1.0
value = 10.0
scrollable = false

[node name="Size Label" type="Label" parent="HUD/Size"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -33.0
offset_right = 42.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "Maze Size: 10"

[node name="AllowDiagonal" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -392.0
offset_bottom = -345.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 13
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Allow
Diagonal"

[node name="Clear" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -335.0
offset_bottom = -288.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Clear"

[node name="RandomizePath" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -278.0
offset_bottom = -230.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Randomize
Path"

[node name="Randomize" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -220.0
offset_bottom = -173.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Randomize"

[node name="CreateMaze" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -163.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Create Maze"

[node name="ToggleCalculate" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -106.0
offset_bottom = -58.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Toggle
Calculate"

[node name="Calculate" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -47.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Calculate"

[node name="SetStart" type="Button" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_right = 87.0
grow_vertical = 0
theme_override_font_sizes/font_size = 19
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Set Start"

[node name="SetEnd" type="Button" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -104.0
offset_right = 87.0
offset_bottom = -57.0
grow_vertical = 0
theme_override_font_sizes/font_size = 19
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xaafu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tcajv")
text = "Set End
"

[connection signal="drag_ended" from="HUD/Size" to="Blocks" method="_on_size_drag_ended"]
[connection signal="value_changed" from="HUD/Size" to="Blocks" method="_on_size_value_changed"]
[connection signal="pressed" from="HUD/AllowDiagonal" to="Blocks" method="_on_allow_diagonal_pressed"]
[connection signal="pressed" from="HUD/Clear" to="Blocks" method="_on_clear_pressed"]
[connection signal="pressed" from="HUD/RandomizePath" to="Blocks" method="_on_randomize_path_pressed"]
[connection signal="pressed" from="HUD/Randomize" to="Blocks" method="_on_randomize_pressed"]
[connection signal="pressed" from="HUD/CreateMaze" to="Blocks" method="_on_create_maze_pressed"]
[connection signal="pressed" from="HUD/ToggleCalculate" to="Blocks" method="_on_toggle_calculate_pressed"]
[connection signal="pressed" from="HUD/Calculate" to="Blocks" method="_on_calculate_pressed"]
[connection signal="pressed" from="HUD/SetStart" to="Blocks" method="_on_set_start_pressed"]
[connection signal="pressed" from="HUD/SetEnd" to="Blocks" method="_on_set_end_pressed"]
